src/objects/ValidState__c.object
<CustomObject>
    <description>These are locations for the Project - state and country</description>
    <fields>
        <fullName>AECOM_Region__c</fullName>
        <label>AECOM Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPA_Region__c</fullName>
        <label>EPA Region</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSA_Region__c</fullName>
        <label>GSA Region</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>AECOM Geography associated with this state/prov</description>
        <inlineHelpText>AECOM Geography associated with this state/prov</inlineHelpText>
        <label>Geography</label>
        <referenceTo>Geography__c</referenceTo>
        <relationshipLabel>States and Countries</relationshipLabel>
        <relationshipName>States_and_Countries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Geography__c</fullName>
        <inlineHelpText>Autopopulated based on State/Province, can be overwritten by content manager.</inlineHelpText>
        <label>Project Geography</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia and Oceania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South America</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Super__c</fullName>
        <formula>Text(Supergeography__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Super</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supergeography__c</fullName>
        <description>AECOM Geography Group</description>
        <inlineHelpText>AECOM Geography Group</inlineHelpText>
        <label>Supergeography</label>
        <picklist>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AsiaPac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Worldwide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>State and Country</label>
    <listViews>
        <fullName>Africa_Countries_and_subdivisions</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <columns>Project_Geography__c</columns>
        <columns>Supergeography__c</columns>
        <columns>AECOM_Region__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Geography__c</field>
            <operation>equals</operation>
            <value>Africa</value>
        </filters>
        <label>Africa Countries and subdivisions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <columns>AECOM_Region__c</columns>
        <columns>EPA_Region__c</columns>
        <columns>GSA_Region__c</columns>
        <columns>Geography__c</columns>
        <columns>Project_Geography__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Europe</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>AECOM_Region__c</columns>
        <columns>Geography__c</columns>
        <columns>Supergeography__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Geography__c</field>
            <operation>equals</operation>
            <value>Europe</value>
        </filters>
        <label>Europe</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ID_US_CA</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>AECOM_Region__c</columns>
        <columns>Country__c</columns>
        <columns>EPA_Region__c</columns>
        <columns>Geography__c</columns>
        <columns>GSA_Region__c</columns>
        <columns>Project_Geography__c</columns>
        <columns>State__c</columns>
        <columns>Super__c</columns>
        <columns>Supergeography__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Canada,United States</value>
        </filters>
        <label>ID US &amp; CA</label>
        <language>en_US</language>
        <sharedTo>
            <group>Content_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Projects_State_Lookup</fullName>
        <columns>NAME</columns>
        <columns>AECOM_Region__c</columns>
        <columns>EPA_Region__c</columns>
        <columns>GSA_Region__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>Projects State Lookup</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>UK_selections</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <columns>Project_Geography__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>startsWith</operation>
            <value>United Kingdom</value>
        </filters>
        <label>UK selections</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>State/Country</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>States and Countries</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>